feat: list pronouns
